--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "tsc -p tsconfig.server.json -w & nodemon --watch dist dist/index.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,17 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "chumi": "^0.0.10",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "koa": "^2.14.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.5",
+    "nodemon": "^2.0.21"
   }
 }
