--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,19 +6,20 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "experimentalDecorators": true,
+    "baseUrl": "server",
+    "outDir": "dist",
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "server/*.ts"],
   "exclude": ["node_modules"]
 }
