--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "chumi": "^0.0.10",
+    "chumi": "1.0.5",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "koa": "^2.14.1",
